WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
130546
FTL ValueToInt32 mishandles the constant case, and by the way, there is a constant case that the FTL sees
https://bugs.webkit.org/show_bug.cgi?id=130546
Summary
FTL ValueToInt32 mishandles the constant case, and by the way, there is a con...
Filip Pizlo
Reported
2014-03-20 16:55:21 PDT
Patch forthcoming.
Attachments
the patch
(9.66 KB, patch)
2014-03-20 17:01 PDT
,
Filip Pizlo
mhahnenberg
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2014-03-20 17:01:17 PDT
Created
attachment 227356
[details]
the patch
WebKit Commit Bot
Comment 2
2014-03-20 17:04:04 PDT
Attachment 227356
[details]
did not pass style-queue: ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:3904: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:3906: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:3908: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:3912: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:3921: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:3925: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:3927: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:3929: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:3936: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] Total errors found: 9 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Mark Hahnenberg
Comment 3
2014-03-20 17:04:15 PDT
Comment on
attachment 227356
[details]
the patch r=me
Mark Hahnenberg
Comment 4
2014-03-20 17:05:09 PDT
(In reply to
comment #2
)
>
Attachment 227356
[details]
did not pass style-queue: > > > ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:3904: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] > ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:3906: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] > ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:3908: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] > ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:3912: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] > ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:3921: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] > ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:3925: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] > ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:3927: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] > ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:3929: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] > ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:3936: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] > Total errors found: 9 in 5 files > > > If any of these errors are false positives, please file a bug against check-webkit-style.
Modulo style.
Filip Pizlo
Comment 5
2014-03-20 17:07:07 PDT
(In reply to
comment #4
)
> (In reply to
comment #2
) > >
Attachment 227356
[details]
[details] did not pass style-queue: > > > > > > ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:3904: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] > > ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:3906: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] > > ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:3908: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] > > ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:3912: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] > > ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:3921: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] > > ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:3925: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] > > ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:3927: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] > > ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:3929: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] > > ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:3936: When wrapping a line, only indent 4 spaces. [whitespace/indent] [3] > > Total errors found: 9 in 5 files > > > > > > If any of these errors are false positives, please file a bug against check-webkit-style. > > Modulo style.
Yup. :-)
Filip Pizlo
Comment 6
2014-03-20 17:33:22 PDT
Landed in
http://trac.webkit.org/changeset/166030
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug